# roastcurve

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs  roast_session.rs  serial.rs
src/components/: ComparisonView.tsx  CuppingForm.tsx  HistoryView.tsx  InventoryView.tsx  RoastDashboard.tsx  RoastDetailView.tsx  SettingsView.tsx  StatsView.tsx
src/styles/: design-system.css
src/types/: models.ts
